--- a/bukkit.yml
+++ b/bukkit.yml
@@ -55,3 +55,6 @@ database:
   driver: org.sqlite.JDBC
   password: walrus
   url: jdbc:sqlite:{DIR}{NAME}.db
+worlds:
+  world:
+    generator: TerrainControl
