--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Sep 12 23:19:30 MDT 2014
+#Sat Sep 13 13:30:17 MDT 2014
 generator-settings=
 op-permission-level=4
 allow-nether=true
@@ -11,7 +11,7 @@ server-port=25565
 level-type=DEFAULT
 enable-rcon=false
 force-gamemode=false
-level-seed=
+level-seed=101202303
 server-ip=
 max-build-height=256
 spawn-npcs=true
@@ -30,4 +30,5 @@ max-players=20
 spawn-monsters=true
 generate-structures=true
 view-distance=10
+spawn-protection=16
 motd=A Minecraft Server
