Added all the cloud pieces. Modified we-cloud_base_1.bo3 to spawn somewhat correctly. None of the others have been modified. Added the creation of the base in SkyIsland biomes.

--- a/plugins/TerrainControl/worlds/world/WorldConfig.ini
+++ b/plugins/TerrainControl/worlds/world/WorldConfig.ini
@@ -50,7 +50,7 @@ BiomeMode: Normal
 
 # The available ids range from 0 to 1023 and the ids 0-39 and 129-167 are taken by vanilla.
 # The ids 256-1023 cannot be saved to the map files, so use ReplaceToBiomeName in that biome.
-CustomBiomes: 
+CustomBiomes: Arctic:40,SkyIslands:41
 
 
 #######################################################################
@@ -77,16 +77,16 @@ BiomeRarityScale: 100
 
 # Don't forget to register your custom biomes first in CustomBiomes!
 # Biomes generated normal way. Names are case sensitive.
-NormalBiomes: Beach
+NormalBiomes: Arctic
 
 # Biomes generated in "ice areas". Names are case sensitive.
-IceBiomes: Beach
+IceBiomes: Arctic
 
 # Biomes used as isles in other biomes. You must set IsleInBiome in biome config for each biome here. Biome name is case sensitive.
-IsleBiomes: Beach
+IsleBiomes: SkyIslands
 
 # Biomes used as borders of other biomes. You must set BiomeIsBorder in biome config for each biome here. Biome name is case sensitive.
-BorderBiomes: Beach
+BorderBiomes: Arctic
 
 ########################################
 # Landmass settings (for NormalBiomes) #
@@ -125,7 +125,7 @@ RiverRarity: 4
 RiverSize: 0
 
 # Set this to false to prevent the river generator from doing anything.
-RiversEnabled: true
+RiversEnabled: false
 
 # When this is set to false, the standard river generator of Minecraft will be used.
 # This means that a technical biome, determined by the RiverBiome setting of the biome
@@ -227,7 +227,7 @@ PopulationBoundsCheck: true
 #################
 
 # Set water level. Every empty block under this level will be fill water or another block from WaterBlock 
-WaterLevelMax: 63
+WaterLevelMax: 0
 
 WaterLevelMin: 0
 
@@ -254,7 +254,7 @@ ResourcesSeed:
 ###############
 
 # Set this to false to prevent the stronghold generator from doing anything.
-StrongholdsEnabled: true
+StrongholdsEnabled: false
 
 # The number of strongholds in the world.
 StrongholdCount: 3
@@ -273,7 +273,7 @@ StrongholdSpread: 3
 VillagesEnabled: true
 
 # The size of the village. Larger is bigger. Normal worlds have 0 as default, superflat worlds 1.
-VillageSize: 0
+VillageSize: 2
 
 # The minimum distance between the village centers in chunks. Minimum value is 9.
 VillageDistance: 32
@@ -284,7 +284,7 @@ VillageDistance: 32
 
 # Rare buildings are either desert pyramids, jungle temples or swamp huts.
 # Whether rare buildings are enabled.
-RareBuildingsEnabled: true
+RareBuildingsEnabled: false
 
 # The minimum distance between rare buildings in chunks.
 MinimumDistanceBetweenRareBuildings: 9
@@ -296,7 +296,7 @@ MaximumDistanceBetweenRareBuildings: 32
 # Other structures #
 ####################
 
-MineshaftsEnabled: true
+MineshaftsEnabled: false
 
 NetherFortressesEnabled: false
 
@@ -322,7 +322,7 @@ WorldNightFog: 0x0b0d17
 #######################################################################
 
 # This controls the odds that a given chunk will host a single cave and/or the start of a cave system.
-caveRarity: 7
+caveRarity: 9
 
 # The number of times the cave generation algorithm will attempt to create single caves and cave
 # systems in the given chunk. This value is larger because the likelihood for the cave generation
@@ -338,13 +338,13 @@ caveFrequency: 40
 # density of caves at all altitudes.
 caveMinAltitude: 8
 
-caveMaxAltitude: 128
+caveMaxAltitude: 200
 
 # The odds that the cave generation algorithm will generate a single cavern without an accompanying
 # cave system. Note that whenever the algorithm generates an individual cave it will also attempt to
 # generate a pocket of cave systems in the vicinity (no guarantee of connection or that the cave system
 # will actually be created).
-individualCaveRarity: 25
+individualCaveRarity: 40
 
 # The number of times the algorithm will attempt to start a cave system in a given chunk per cycle of
 # the cave generation algorithm (see cave frequency setting above). Note that setting this value too
