--- a/plugins/TerrainControl/worlds/world/WorldConfig.ini
+++ b/plugins/TerrainControl/worlds/world/WorldConfig.ini
@@ -50,7 +50,7 @@ BiomeMode: Normal
 
 # The available ids range from 0 to 1023 and the ids 0-39 and 129-167 are taken by vanilla.
 # The ids 256-1023 cannot be saved to the map files, so use ReplaceToBiomeName in that biome.
-CustomBiomes: Arctic:40,SkyIslands:41
+CustomBiomes: Arctic:0,SkyIslands:1
 
 
 #######################################################################
@@ -83,7 +83,7 @@ NormalBiomes: Arctic
 IceBiomes: Arctic
 
 # Biomes used as isles in other biomes. You must set IsleInBiome in biome config for each biome here. Biome name is case sensitive.
-IsleBiomes: SkyIslands
+IsleBiomes: 
 
 # Biomes used as borders of other biomes. You must set BiomeIsBorder in biome config for each biome here. Biome name is case sensitive.
 BorderBiomes: Arctic
@@ -93,7 +93,7 @@ BorderBiomes: Arctic
 ########################################
 
 # Land rarity from 100 to 1. If you set smaller than 90 and LandSize near 0 beware Big oceans.
-LandRarity: 97
+LandRarity: 100
 
 # Land size from 0 to GenerationDepth.
 LandSize: 0
