Replace dirt with PACKED ICE when found underground. Formalized clouds a bit. Added acid rain and made it work for 'world'

--- a/plugins/TerrainControl/worlds/world/WorldConfig.ini
+++ b/plugins/TerrainControl/worlds/world/WorldConfig.ini
@@ -50,7 +50,7 @@ BiomeMode: Normal
 
 # The available ids range from 0 to 1023 and the ids 0-39 and 129-167 are taken by vanilla.
 # The ids 256-1023 cannot be saved to the map files, so use ReplaceToBiomeName in that biome.
-CustomBiomes: Arctic:0,SkyIslands:1
+CustomBiomes: Arctic:12
 
 
 #######################################################################
